Additional fixes in GameWorld/World